kubernetes/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: portfolio
  name: portfolio
spec:
  type: NodePort
  selector:
    app: portfolio
  ports: 
    - port: 80
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: frontend
          image: wearebrews/portfolio:e6f4cf5836f43cddfcd9db7400ede6b3ff987ad0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.25"
              memory: "0.5Gi"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: routing-ingress
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - shapingideas.fyi
    secretName: letsencrypt-prod
  rules:  
    - host: shapingideas.fyi
      http:
        paths:
        - path: /
          backend:
            serviceName: portfolio
            servicePort: 80
